--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.app {
+  text-align: center;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  align-content: center;
+  cursor: default;
+}
