--- a/src/Dashboard/DashBoardStyle.css
+++ b/src/Dashboard/DashBoardStyle.css
@@ -41,6 +41,7 @@
     width: 100%;
     list-style-type: none;
     margin-top: 5px;
+    padding: 15px;
 }
 .task-li:hover {
     background-color: rgba(78, 205, 196, 0.4);
