--- a/src/Dashboard/DashBoardStyle.css
+++ b/src/Dashboard/DashBoardStyle.css
@@ -3,6 +3,7 @@
     background-color: white;
     border: 2px solid #4ECDC4;
     margin-left: 10px;
+    margin-top: 5px;
     border-radius: 10px;
 
 }
@@ -25,6 +26,7 @@
     border: 2px solid #4ECDC4;
     border-radius: 10px;
     margin-left: 10px;
+    margin-top: 5px;
     height: 30px;
 
 }
