--- a/src/components/DatePickerStyle.css
+++ b/src/components/DatePickerStyle.css
@@ -14,7 +14,10 @@
 }
 
 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
-    background-color: #4ECDC4;
+    color: white;
+    background-color: rgba(255, 93, 115, 0.7);
+    border-color:rgba(255, 93, 115, 1) ;
+    border-radius: 0;
 }
 
 .DayPicker:not(.DayPicker--interactionDisabled)
@@ -31,11 +34,19 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15)
 }
 
+.DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
+    position: relative;
+    color: white;
+    background-color: rgba(255, 93, 115, 0.7);
+    border-color:rgba(255, 93, 115, 1) ;
+    border-radius: 0;
+}
 .DPContainer{
     box-shadow: 1px 7px 5px 3px #4ECDC4;
 }
 input{
     color: #4ECDC4;
+    padding: 15px;
     background-color: white;
     border: 2px solid #4ECDC4!important;
     border-radius: 10px;
