--- a/src/components/GeneralComponentsStyle.css
+++ b/src/components/GeneralComponentsStyle.css
@@ -1,147 +1,141 @@
 a:any-link {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 ul {
-    text-align: center;
-    margin: auto;
-    width: 7%;
-    padding: 0px;
+  text-align: center;
+  margin: auto;
+  width: 7%;
+  padding: 0px;
 }
 
 .nav-div {
-    float: left;
+  float: left;
 }
 
 .logo-div {
-    background-color: inherit;
-    list-style-type: none;
+  background-color: inherit;
+  list-style-type: none;
 }
 
 .app {
-    text-align: center;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    align-content: center;
-    cursor: default;
+  text-align: center;
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+  align-content: center;
+  cursor: default;
 }
 
 .app-logo-hover {
-    animation: app-logo-spin infinite 3s linear;
-    height: 100px;
+  animation: app-logo-spin infinite 3s linear;
+  height: 100px;
 }
 
 @keyframes app-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .app-logo {
-    height: 100px;
+  height: 100px;
 }
 
 .app-header {
-    background-color: #4ECDC4;
-    height: 15%;
-    padding: 20px;
-    color: white;
-    text-align: center;
+  background-color: #4ecdc4;
+  height: 15%;
+  padding: 20px;
+  color: white;
+  text-align: center;
 }
 
 .container-fluid {
-    margin-top: 3%;
+  margin-top: 3%;
 }
 
 .app-brand {
-    font-size: 40px;
-    font-weight: bold;
-    list-style-type: none;
+  font-size: 40px;
+  font-weight: bold;
+  list-style-type: none;
 }
 
 .app-nav-bar-item {
-    height: 50px;
-    width: 115px;
-    list-style-type: none;
-    text-align: center;
-
+  height: 50px;
+  width: 115px;
+  list-style-type: none;
+  text-align: center;
 }
 
 .app-nav-bar-item:hover {
-    border-bottom: solid #4ECDC4 0px;
-    animation: navAnimation 3s ease forwards;
-
+  border-bottom: solid #4ecdc4 0px;
+  animation: navAnimation 3s ease forwards;
 }
 
 .app-nav-bar-item-active {
-    height: 50px;
-    width: 115px;
-    list-style-type: none;
-    text-align: center;
-    border-bottom: solid white 5px;
+  height: 50px;
+  width: 115px;
+  list-style-type: none;
+  text-align: center;
+  border-bottom: solid white 5px;
 }
 
 .navbar-header {
-    font-size: 30px;
-    font-weight: bold;
-    margin: -12px;
+  font-size: 30px;
+  font-weight: bold;
+  margin: -12px;
 }
 
 .navbar-nav {
-    font-size: 20px;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size: 20px;
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
 }
 
 .example-appear.example-appear-active {
-    opacity: 1;
-    transition: opacity .20s ease-in;
+  opacity: 1;
+  transition: opacity 0.2s ease-in;
 }
 
 @keyframes navAnimation {
-    from {
-        border-bottom: solid #4ECDC4 5px;
-    }
-    to {
-        border-bottom: solid white 5px;
-    }
+  from {
+    border-bottom: solid #4ecdc4 5px;
+  }
+  to {
+    border-bottom: solid white 5px;
+  }
 }
 
 .iconimg:any-link {
-    font-size: 7em;
-    color: #4ECDC4;
-    height: 100px;
-    width: 100px;
-    margin: 40px;
-    animation: icons-shrink 1s ease forwards;
+  font-size: 7em;
+  color: #4ecdc4;
+  height: 100px;
+  width: 100px;
+  margin: 40px;
+  animation: icons-shrink 1s ease forwards;
 }
 
 .iconimg:hover {
-    animation: icons-grown 1s ease forwards;
+  animation: icons-grown 1s ease forwards;
 }
 
 @keyframes icons-grown {
-    from {
-        font-size: 7em;
-        color: inherit;
-    }
-    to {
-        font-size: 8em;
-
-    }
-
+  from {
+    font-size: 7em;
+    color: inherit;
+  }
+  to {
+    font-size: 8em;
+  }
 }
 
 @keyframes icons-shrink {
-    from {
-        font-size: 8em;
-
-    }
-    to {
-        font-size: 7em;
-        color: inherit;
-    }
-
+  from {
+    font-size: 8em;
+  }
+  to {
+    font-size: 7em;
+    color: inherit;
+  }
 }
