--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,18 @@
 @import url('https://fonts.googleapis.com/css?family=Kite+One');
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 .app {
-    text-align: center;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    align-content: center;
-    cursor: default;
+  text-align: center;
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+  align-content: center;
+  cursor: default;
 }
 
 .bold {
-    font-weight: bold;
+  font-weight: bold;
 }
