--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope');
 @import url('https://fonts.googleapis.com/css?family=Kite+One');
+@import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Amatic+SC');
 
 body {
   margin: 0;
