--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -37,4 +37,8 @@ $home-body-height: 100% - $app-header-height;
 .outline {
   border: solid $primary-color 20px;
   height: $home-body-height;
+  h1 {
+    font-family: 'Amatic SC';
+    font-size: 65px;
+  }
 }
