--- a/src/Links/Links.scss
+++ b/src/Links/Links.scss
@@ -10,6 +10,9 @@
 .link-item {
   border-bottom: solid $primary-color 2px;
   padding: 10px;
+  h3 {
+    font-family: 'Abel';
+  }
   &:hover {
     animation: itemHover 1s ease forwards;
     cursor: pointer;
@@ -48,4 +51,7 @@
 
 .list-container {
   align-content: center;
+  h1 {
+    font-family: 'Abril Fatface';
+  }
 }
