--- a/src/EcologicalTips/EcologicalTips.scss
+++ b/src/EcologicalTips/EcologicalTips.scss
@@ -1,4 +1,5 @@
-$default-tip-height: 150px;
+@import '../App.scss';
+$default-tip-height: 160px;
 $hover-tip-height: 350px;
 $default-tip-width: 750px;
 $border-radius: 25px;
@@ -16,6 +17,7 @@ $num-of-eco-items: 6;
   height: $default-tip-height;
   display: inline-block;
   position: relative;
+  transition: all 750ms ease;
   margin-bottom: 5px;
 
   &:after {
@@ -32,7 +34,6 @@ $num-of-eco-items: 6;
   &:hover:after {
     opacity: 0.45;
     z-index: 5;
-    height: $hover-tip-height;
     position: absolute;
     transition: height 0.35s ease-in-out;
     -moz-transition: opacity 0.35s ease-in-out;
@@ -42,10 +43,9 @@ $num-of-eco-items: 6;
     h2 {
       display: block;
       color: #ffffff;
-      font-family: 'Abel';
     }
     .layer {
-      height: $hover-tip-height;
+      background-color: black;
       position: absolute;
       z-index: 5;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -53,26 +53,23 @@ $num-of-eco-items: 6;
     }
   }
   h2 {
-    color: transparent;
-    display: none;
+    font-family: 'Josefin Slab';
+    font-size: 50px;
   }
   p {
-    font-family: 'Abel';
-  }
-}
-@for $i from 1 to $num-of-eco-items {
-  .ecoItem:nth-of-type(#{$i}):hover ~ div:nth-of-type(#{$i + 1}) {
-    margin-top: $hover-tip-height -$default-tip-height + 10px;
+    font-family: 'Poiret One';
+    font-size: 22px;
   }
 }
 
 .layer {
-  background-color: #000000;
+  background-color: $primary-color;
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: -3;
   border-radius: $border-radius;
+  transition: background-color 500ms ease;
 }
 .recycle {
   &:after {
@@ -109,5 +106,37 @@ $num-of-eco-items: 6;
   &:after {
     background-image: url('../drawable/educateothers.jpg');
     background-position: center;
+  }
+}
+.ecoItem-clicked {
+  content: '';
+  width: $default-tip-width;
+  height: $hover-tip-height;
+  display: inline-block;
+  position: relative;
+  transition: all 750ms ease;
+  margin-bottom: 5px;
+
+  &:after {
+    content: '';
+    opacity: 0.25;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: 5;
+    border-radius: $border-radius;
+    transition: all 500ms ease;
+  }
+  h2,
+  &:hover h2 {
+    display: none;
+  }
+  p {
+    font-family: 'Poiret One';
+    font-size: 26px;
+    text-align: center;
+    margin: 5px;
   }
 }
