--- a/src/Links/Links.scss
+++ b/src/Links/Links.scss
@@ -14,7 +14,7 @@
     font-family: 'Abel';
   }
   &:hover {
-    animation: itemHover 1s ease forwards;
+    animation: linkItemHover 1s ease forwards;
     cursor: pointer;
     color: $primary-color;
   }
@@ -24,7 +24,7 @@
   color: $primary-color;
 }
 
-@keyframes itemHover {
+@keyframes linkItemHover {
   from {
     box-shadow: 1px 7px 5px 3px transparent;
   }
