#36 projects page add

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,9 @@ html {
   padding: 20px;
   color: $secondary-color;
   text-align: center;
+  position: sticky;
+  top: 0px;
+  z-index: 99;
 }
 
 .container-fluid {
