--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -13,12 +13,15 @@
 .carousel-row > [class*='col-'] {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
   align-items: center;
+  justify-content: center;
 }
 
 .icon-style {
   font-size: 4em;
   color: $primary-color;
   align-self: center;
+}
+.todeletelater {
+  min-width: 400px;
 }
