--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,32 @@
 @import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Amatic+SC|Bree+Serif');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Slab|Poiret+One');
 
-body {
+body,
+html {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  height: 100%;
+  width: 100%;
+}
+#root {
+  height: 100%;
+}
+.container-fluid {
+  margin-top: 3%;
+}
+/* For Navigation Bar */
+.nav > li > a:focus,
+.nav > li > a:hover {
+  text-decoration: none;
+  background-color: transparent;
+}
+a:any-link {
+  color: white;
+  text-decoration: none;
+  font-family: 'Abel';
+  font-size: 25px;
+}
+ul {
+  text-align: center;
+  margin: auto;
+  padding: 0px;
 }
